feat: Support for street legs in similar-legs-filter.
The group key now support street legs. For itineraries to be grouped together the legs must match. To legs match if:
 - the mode is the same
 - they overlap in time
 - both are transit, and they have the same trip id and overlap in place